--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #345690;
   text-align: left;
   background-color: #fff;
 }
@@ -376,7 +376,6 @@ h2, .h2 {
 
 h3, .h3 {
   font-size: 1.75rem;
-  color: #fec503;
 }
 
 h4, .h4 {
@@ -1081,6 +1080,7 @@ pre code {
   .col-md-4 {
     flex: 0 0 33.3333333333%;
     max-width: 33.3333333333%;
+    margin: auto;
   }
 
   .col-md-5 {
@@ -1292,6 +1292,7 @@ pre code {
   .col-lg-4 {
     flex: 0 0 33.3333333333%;
     max-width: 33.3333333333%;
+    margin: auto;
   }
 
   .col-lg-5 {
@@ -2439,29 +2440,29 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #345690;
+  border-color: #345690;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
+  background-color: #345690;
+  border-color: #345690;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
+  background-color: #345690;
+  border-color: #345690;
   box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #345690;
+  border-color: #345690;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #fec503;
-  border-color: #f3bd01;
+  background-color: #345690;
+  border-color: #345690;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
@@ -7902,7 +7903,7 @@ button.bg-dark:focus {
 
 .ml-auto,
 .mx-auto {
-  margin: auto;
+  margin-left: auto !important;
 }
 
 @media (min-width: 576px) {
@@ -10057,7 +10058,7 @@ img::-moz-selection {
   font-size: 0.75rem;
   color: #fff;
   text-transform: uppercase;
-  background-color: #fed136;
+  background-color: #345690;
   border: 0;
 }
 #mainNav .navbar-brand {
@@ -10077,7 +10078,7 @@ img::-moz-selection {
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+  color: #345690;
 }
 
 @media (min-width: 992px) {
@@ -10174,7 +10175,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(16, 18, 131, 0.9);
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -10182,7 +10183,7 @@ header.masthead .masthead-heading {
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
   font-size: 1.25rem;
-  color: white;
+  color: white;F.btn-primary
 }
 #portfolio .portfolio-item .portfolio-link:hover .portfolio-hover {
   opacity: 1;
